@@ -1,74 +1,22 @@
-Erro abaixo e reportado pelo arquivo em anexo impede  acessar o sistema (Funciona na VPN, mas não no presencial no rédio da Caixa no RIo de Janeiro) para colaborar no desenvolvimento na plataforma  na URL mostrada na imagem em anexo.
 
-URL :https://simrc-backend.esteiras.des.caixa/simrc/#/principal
-IP do simrc: simrc-backend.esteiras.des.caixa [10.116.181.121]
-
-
-
-<img width="1150" height="837" alt="mrc" src="https://github.com/user-attachments/assets/d872dd0f-e8ec-4602-8545-3bbcde88de07" />
-
-
-<img width="1038" height="270" alt="mrc_ip_ping_timeout" src="https://github.com/user-attachments/assets/c7c8acb8-f6a6-44ed-a659-843c5ba570d4" />
-
-
-
-esse mesmo problema aconteceu com sicmu..
-
-e fizemos isso
-
-
-REQ000144738545
- 
-Marcelo Lucindo de Souza
-REQ000144738545
-Jesse Mouta Pereira Batista
- 
-A partir de meio-dia estou disponível aqui
- 
-Marcelo Lucindo de Souza
- 
-esta sem regra de firewall
- 
-Verifiquei que de fato não há regra permitindo o acesso https://sicmu-intranet-update.esteiras.des.caixa/ a partir do túnel de VPN do Marcelo, bem como uma regra em direção a esse serviço nunca foi solicitada no portal regras.telecom.caixa. Para os que funcionam, é porque há uma outra regra abrangente permitindo. O Marcelo teria que solicitar assim:
- 
-Origem: VPN_CAIXA
-Destino: 10.116.181.177 (sicmu-intranet-update.esteiras.des.caixa)
-Porta: 443
-
-<img width="1904" height="983" alt="image" src="https://github.com/user-attachments/assets/abf9636e-1165-44f1-aafc-2550ce8cb299" />
-
-
-pela vpn acessa
-
-
-entrei aqui pelo servidor.. me ajuda a achar so dados para solicitar a regra de firewall
-
-
-
-[p585600@caddeapllx2423 ~]$ ps -ef | grep jboss
-root       14592       1  0 mai07 ?        00:00:00 runuser jboss -c LAUNCH_JBOSS_IN_BACKGROUND=1 JBOSS_PIDFILE=/opt/jboss-eap/standalone/tmp/jboss-eap-standalone.pid /opt/jboss-eap/bin/standalone.sh                -b 0.0.0.0                -bmanagement 0.0.0.0                -Djboss.server.base.dir=/opt/jboss-eap/standalone                -Djboss.server.log.dir=/logs/jboss/jboss-eap/standalone/simrc-backend -c standalone-full-ha.xml
-jboss      14595   14592  0 mai07 ?        00:00:00 /bin/sh /opt/jboss-eap/bin/standalone.sh -b 0.0.0.0 -bmanagement 0.0.0.0 -Djboss.server.base.dir=/opt/jboss-eap/standalone -Djboss.server.log.dir=/logs/jboss/jboss-eap/standalone/simrc-backend -c standalone-full-ha.xml
-jboss      14853   14595  0 mai07 ?        05:11:39 java -D[Standalone] -Xlog:gc*:file=/logs/jboss/jboss-eap/standalone/simrc-backend/gc.log:time,uptimemillis:filecount=5,filesize=3M -Djdk.serialFilter=maxbytes=10485760;maxdepth=128;maxarray=100000;maxrefs=300000 -Xms6144m -Xmx6144m -XX:MetaspaceSize=96m -XX:MaxMetaspaceSize=512m -Djava.net.preferIPv4Stack=true -Djboss.modules.system.pkgs=org.jboss.byteman,org.jboss.logmanager -Djava.awt.headless=true -Djavax.net.ssl.trustStore=/opt/jboss-eap/standalone/configuration/caixa-truststore-acteste-nprd.jks -Djavax.net.ssl.trustStorePassword=changeit -Djboss.modules.policy-permissions=true -server -XX:+ExplicitGCInvokesConcurrent -XX:+UseG1GC -XX:MaxGCPauseMillis=500 -Xbootclasspath/a:/opt/jboss-eap/modules/system/layers/base/org/wildfly/common/main/wildfly-common-1.5.4.Final-redhat-00001.jar -Xbootclasspath/a:/opt/jboss-eap/modules/system/layers/base/org/jboss/logmanager/main/jboss-logmanager-2.1.18.Final-redhat-00001.jar -Dsun.util.logging.disableCallerCheck=true -Djava.util.logging.manager=org.jboss.logmanager.LogManager -javaagent:/opt/jmx_exporter/jmx_prometheus.jar=8778:/opt/jmx_exporter/jmx_prometheus.yaml -javaagent:/opt/apm_agent/elastic-apm-agent-1.15.0.jar -Delastic.apm.config_file=/opt/apm_agent/elasticapm-1.15.0.properties -Delastic.apm.service_name=simrc-backend -Delastic.apm.environment=DES -Delastic.apm.application_packages=br.gov.caixa -Delastic.apm.server_urls=http://apm-server-devops.apps.produtos4.caixa -Delastic.apm.global_labels=deployment=simrc-backend-des-esteiras --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED --add-exports=java.desktop/sun.awt=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.url.ldap=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.url.ldaps=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.management/javax.management=ALL-UNNAMED --add-opens=java.naming/javax.naming=ALL-UNNAMED -Dorg.jboss.boot.log.file=/logs/jboss/jboss-eap/standalone/simrc-backend/server.log -Dlogging.configuration=file:/opt/jboss-eap/standalone/configuration/logging.properties -jar /opt/jboss-eap/jboss-modules.jar -mp /opt/jboss-eap/modules org.jboss.as.standalone -Djboss.home.dir=/opt/jboss-eap -Djboss.server.base.dir=/opt/jboss-eap/standalone -b 0.0.0.0 -bmanagement 0.0.0.0 -Djboss.server.base.dir=/opt/jboss-eap/standalone -Djboss.server.log.dir=/logs/jboss/jboss-eap/standalone/simrc-backend -c standalone-full-ha.xml
-p585600   889978  889951  0 11:15 pts/0    00:00:00 grep --color=auto jboss
-[p585600@caddeapllx2423 ~]$ ps -ef | grep java
-jboss      14853   14595  0 mai07 ?        05:11:39 java -D[Standalone] -Xlog:gc*:file=/logs/jboss/jboss-eap/standalone/simrc-backend/gc.log:time,uptimemillis:filecount=5,filesize=3M -Djdk.serialFilter=maxbytes=10485760;maxdepth=128;maxarray=100000;maxrefs=300000 -Xms6144m -Xmx6144m -XX:MetaspaceSize=96m -XX:MaxMetaspaceSize=512m -Djava.net.preferIPv4Stack=true -Djboss.modules.system.pkgs=org.jboss.byteman,org.jboss.logmanager -Djava.awt.headless=true -Djavax.net.ssl.trustStore=/opt/jboss-eap/standalone/configuration/caixa-truststore-acteste-nprd.jks -Djavax.net.ssl.trustStorePassword=changeit -Djboss.modules.policy-permissions=true -server -XX:+ExplicitGCInvokesConcurrent -XX:+UseG1GC -XX:MaxGCPauseMillis=500 -Xbootclasspath/a:/opt/jboss-eap/modules/system/layers/base/org/wildfly/common/main/wildfly-common-1.5.4.Final-redhat-00001.jar -Xbootclasspath/a:/opt/jboss-eap/modules/system/layers/base/org/jboss/logmanager/main/jboss-logmanager-2.1.18.Final-redhat-00001.jar -Dsun.util.logging.disableCallerCheck=true -Djava.util.logging.manager=org.jboss.logmanager.LogManager -javaagent:/opt/jmx_exporter/jmx_prometheus.jar=8778:/opt/jmx_exporter/jmx_prometheus.yaml -javaagent:/opt/apm_agent/elastic-apm-agent-1.15.0.jar -Delastic.apm.config_file=/opt/apm_agent/elasticapm-1.15.0.properties -Delastic.apm.service_name=simrc-backend -Delastic.apm.environment=DES -Delastic.apm.application_packages=br.gov.caixa -Delastic.apm.server_urls=http://apm-server-devops.apps.produtos4.caixa -Delastic.apm.global_labels=deployment=simrc-backend-des-esteiras --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED --add-exports=java.desktop/sun.awt=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.url.ldap=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.url.ldaps=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.management/javax.management=ALL-UNNAMED --add-opens=java.naming/javax.naming=ALL-UNNAMED -Dorg.jboss.boot.log.file=/logs/jboss/jboss-eap/standalone/simrc-backend/server.log -Dlogging.configuration=file:/opt/jboss-eap/standalone/configuration/logging.properties -jar /opt/jboss-eap/jboss-modules.jar -mp /opt/jboss-eap/modules org.jboss.as.standalone -Djboss.home.dir=/opt/jboss-eap -Djboss.server.base.dir=/opt/jboss-eap/standalone -b 0.0.0.0 -bmanagement 0.0.0.0 -Djboss.server.base.dir=/opt/jboss-eap/standalone -Djboss.server.log.dir=/logs/jboss/jboss-eap/standalone/simrc-backend -c standalone-full-ha.xml
-p585600   889982  889951  0 11:15 pts/0    00:00:00 grep --color=auto java
+[p585600@caddeapllx2423 ~]$ ss -tlnp | grep java
+[p585600@caddeapllx2423 ~]$ ss -tlnp
+State                  Recv-Q                 Send-Q                                 Local Address:Port                                   Peer Address:Port                 Process
+LISTEN                 0                      10000                                        0.0.0.0:8080                                        0.0.0.0:*
+LISTEN                 0                      10000                                        0.0.0.0:8009                                        0.0.0.0:*
+LISTEN                 0                      50                                           0.0.0.0:9990                                        0.0.0.0:*
+LISTEN                 0                      3                                            0.0.0.0:8778                                        0.0.0.0:*
+LISTEN                 0                      10000                                        0.0.0.0:8443                                        0.0.0.0:*
+LISTEN                 0                      50                                         127.0.0.1:3528                                        0.0.0.0:*
+LISTEN                 0                      128                                          0.0.0.0:22                                          0.0.0.0:*
+LISTEN                 0                      65535                                              *:10050                                             *:*
+LISTEN                 0                      65535                                              *:9100                                              *:*
+LISTEN                 0                      511                                                *:80                                                *:*
+LISTEN                 0                      128                                             [::]:22                                             [::]:*
+LISTEN                 0                      511                                                *:443                                               *:*
 [p585600@caddeapllx2423 ~]$
 [p585600@caddeapllx2423 ~]$
+[p585600@caddeapllx2423 ~]$ ss -tlnp | grep 14853
+[p585600@caddeapllx2423 ~]$ netstat -tlnp 2>/dev/null | grep 1485
+[p585600@caddeapllx2423 ~]$ netstat -tlnp 2>/dev/null | grep 14853
 [p585600@caddeapllx2423 ~]$
-[p585600@caddeapllx2423 ~]$
-[p585600@caddeapllx2423 ~]$
-[p585600@caddeapllx2423 ~]$ ps -ef | grep simrc
-root       14592       1  0 mai07 ?        00:00:00 runuser jboss -c LAUNCH_JBOSS_IN_BACKGROUND=1 JBOSS_PIDFILE=/opt/jboss-eap/standalone/tmp/jboss-eap-standalone.pid /opt/jboss-eap/bin/standalone.sh                -b 0.0.0.0                -bmanagement 0.0.0.0                -Djboss.server.base.dir=/opt/jboss-eap/standalone                -Djboss.server.log.dir=/logs/jboss/jboss-eap/standalone/simrc-backend -c standalone-full-ha.xml
-jboss      14595   14592  0 mai07 ?        00:00:00 /bin/sh /opt/jboss-eap/bin/standalone.sh -b 0.0.0.0 -bmanagement 0.0.0.0 -Djboss.server.base.dir=/opt/jboss-eap/standalone -Djboss.server.log.dir=/logs/jboss/jboss-eap/standalone/simrc-backend -c standalone-full-ha.xml
-jboss      14853   14595  0 mai07 ?        05:11:39 java -D[Standalone] -Xlog:gc*:file=/logs/jboss/jboss-eap/standalone/simrc-backend/gc.log:time,uptimemillis:filecount=5,filesize=3M -Djdk.serialFilter=maxbytes=10485760;maxdepth=128;maxarray=100000;maxrefs=300000 -Xms6144m -Xmx6144m -XX:MetaspaceSize=96m -XX:MaxMetaspaceSize=512m -Djava.net.preferIPv4Stack=true -Djboss.modules.system.pkgs=org.jboss.byteman,org.jboss.logmanager -Djava.awt.headless=true -Djavax.net.ssl.trustStore=/opt/jboss-eap/standalone/configuration/caixa-truststore-acteste-nprd.jks -Djavax.net.ssl.trustStorePassword=changeit -Djboss.modules.policy-permissions=true -server -XX:+ExplicitGCInvokesConcurrent -XX:+UseG1GC -XX:MaxGCPauseMillis=500 -Xbootclasspath/a:/opt/jboss-eap/modules/system/layers/base/org/wildfly/common/main/wildfly-common-1.5.4.Final-redhat-00001.jar -Xbootclasspath/a:/opt/jboss-eap/modules/system/layers/base/org/jboss/logmanager/main/jboss-logmanager-2.1.18.Final-redhat-00001.jar -Dsun.util.logging.disableCallerCheck=true -Djava.util.logging.manager=org.jboss.logmanager.LogManager -javaagent:/opt/jmx_exporter/jmx_prometheus.jar=8778:/opt/jmx_exporter/jmx_prometheus.yaml -javaagent:/opt/apm_agent/elastic-apm-agent-1.15.0.jar -Delastic.apm.config_file=/opt/apm_agent/elasticapm-1.15.0.properties -Delastic.apm.service_name=simrc-backend -Delastic.apm.environment=DES -Delastic.apm.application_packages=br.gov.caixa -Delastic.apm.server_urls=http://apm-server-devops.apps.produtos4.caixa -Delastic.apm.global_labels=deployment=simrc-backend-des-esteiras --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED --add-exports=java.desktop/sun.awt=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.url.ldap=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.url.ldaps=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.management/javax.management=ALL-UNNAMED --add-opens=java.naming/javax.naming=ALL-UNNAMED -Dorg.jboss.boot.log.file=/logs/jboss/jboss-eap/standalone/simrc-backend/server.log -Dlogging.configuration=file:/opt/jboss-eap/standalone/configuration/logging.properties -jar /opt/jboss-eap/jboss-modules.jar -mp /opt/jboss-eap/modules org.jboss.as.standalone -Djboss.home.dir=/opt/jboss-eap -Djboss.server.base.dir=/opt/jboss-eap/standalone -b 0.0.0.0 -bmanagement 0.0.0.0 -Djboss.server.base.dir=/opt/jboss-eap/standalone -Djboss.server.log.dir=/logs/jboss/jboss-eap/standalone/simrc-backend -c standalone-full-ha.xml
-p585600   889984  889951  0 11:15 pts/0    00:00:00 grep --color=auto simrc
-[p585600@caddeapllx2423 ~]$
-[p585600@caddeapllx2423 ~]$
-[p585600@caddeapllx2423 ~]$
-[p585600@caddeapllx2423 ~]$
-
-
-
-
- 
